--- a/index.html
+++ b/index.html
@@ -33,75 +33,76 @@
 
 <body class="min-h-screen bg-white text-slate-900">
 
-  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/50"></div>
-  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-slate-950/95 backdrop-blur border-r border-white/10 transition-transform">
-    <div class="p-4 border-b border-white/10 flex items-center justify-between">
+  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
+  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
+    <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
+        <button id="open-auth-top" type="button" class="inline-flex items-center gap-2 rounded-2xl bg-emerald-600 px-4 py-2.5 text-sm font-bold text-white shadow-sm transition hover:bg-emerald-700">Entrar</button>
         <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-emerald-300"></i>
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
         </div>
         <div class="leading-tight">
-          <div class="text-white font-black">Guilda HUB</div>
-          <div class="text-xs text-slate-400">Eventos • Camps • Stats</div>
+          <div class="text-slate-900 font-black">Guilda HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
         </div>
       </div>
-      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-white/5">
-        <i data-lucide="x" class="h-5 w-5 text-slate-200"></i>
+      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-slate-100">
+        <i data-lucide="x" class="h-5 w-5 text-slate-700"></i>
       </button>
     </div>
 
     <nav class="p-3 space-y-1">
-      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="log-in" class="h-4 w-4"></i>
         <span class="font-semibold">Entrar</span>
       </a>
-      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="calendar" class="h-4 w-4"></i>
         <span class="font-semibold">Eventos e Camp</span>
       </a>
-      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="bar-chart-3" class="h-4 w-4"></i>
         <span class="font-semibold">Minhas estatísticas</span>
       </a>
-      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="help-circle" class="h-4 w-4"></i>
         <span class="font-semibold">Suporte</span>
       </a>
     </nav>
 
-    <div class="mt-auto p-4 text-xs text-slate-400 border-t border-white/10">
+    <div class="mt-auto p-4 text-xs text-slate-500 border-t border-white/10">
       <div class="leading-relaxed">Dica: você pode navegar sem login para ver eventos e consultar stats públicas.</div>
     </div>
   </aside>
 
 
-  <button id="mobile-menu-btn" class="fixed left-4 top-4 z-30 h-11 w-11 grid place-items-center rounded-2xl bg-slate-900 text-white shadow-lg">
+  <button id="mobile-menu-btn" class="fixed left-4 top-4 z-30 h-11 w-11 grid place-items-center rounded-2xl bg-slate-900 text-slate-900 shadow-lg">
     <i data-lucide="menu" class="h-5 w-5"></i>
   </button>
 
 
 
-  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/50"></div>
-  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-slate-950/95 backdrop-blur border-r border-white/10 transition-transform">
-    <div class="p-4 border-b border-white/10 flex items-center justify-between">
+  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
+  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
+    <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
         <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-emerald-300"></i>
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
         </div>
         <div class="leading-tight">
-          <div class="text-white font-black">Guilda HUB</div>
-          <div class="text-xs text-slate-400">Eventos • Camps • Stats</div>
+          <div class="text-slate-900 font-black">Guilda HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
         </div>
       </div>
-      <button id="sidebar-close" class="h-9 w-9 rounded-xl hover:bg-white/10 text-slate-200 flex items-center justify-center" aria-label="Fechar menu">
+      <button id="sidebar-close" class="h-9 w-9 rounded-xl hover:bg-white/10 text-slate-700 flex items-center justify-center" aria-label="Fechar menu">
         <i data-lucide="x" class="h-5 w-5"></i>
       </button>
     </div>
     <nav class="p-4 flex flex-col gap-2">
-      <a href="/" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition bg-emerald-600 text-white"><i data-lucide="log-in" class="h-4 w-4"></i><span>Entrar</span></a>
-      <a href="/eventos" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-200 hover:bg-white/10"><i data-lucide="trophy" class="h-4 w-4"></i><span>Eventos e Camp</span></a>
-      <a href="/stats" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-200 hover:bg-white/10"><i data-lucide="chart-no-axes-column" class="h-4 w-4"></i><span>Minhas estatísticas</span></a>
-      <a href="/suporte" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-200 hover:bg-white/10"><i data-lucide="headset" class="h-4 w-4"></i><span>Suporte</span></a>
+      <a href="/" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition bg-emerald-600 text-slate-900"><i data-lucide="log-in" class="h-4 w-4"></i><span>Entrar</span></a>
+      <a href="/eventos" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="trophy" class="h-4 w-4"></i><span>Eventos e Camp</span></a>
+      <a href="/stats" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="chart-no-axes-column" class="h-4 w-4"></i><span>Minhas estatísticas</span></a>
+      <a href="/suporte" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="headset" class="h-4 w-4"></i><span>Suporte</span></a>
     </nav>
     <div class="mt-auto p-4 text-xs text-slate-500 border-t border-white/10">
       Dica: se algo não carregar, atualize a página e tente novamente.
@@ -112,12 +113,7 @@
   <header class="sticky top-0 z-30 border-b border-slate-200/70 bg-white/80 backdrop-blur">
     <div class="mx-auto flex w-full max-w-6xl items-center justify-between px-4 py-3">
       <div class="flex items-center gap-3">
-        <div class="h-10 w-10 rounded-2xl border border-emerald-200 bg-gradient-to-br from-emerald-50 to-white flex items-center justify-center text-emerald-700 shadow-sm">
-          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M12 2l8 4v7c0 5-3.4 9.4-8 9.4S4 18 4 13V6l8-4z"/>
-            <path d="M9 12l2 2 4-5"/>
-          </svg>
-        </div>
+        <button id="sidebar-open" type="button" class="inline-flex h-11 w-11 items-center justify-center rounded-2xl bg-white ring-1 ring-slate-200 text-slate-900 shadow-sm transition hover:bg-slate-50" aria-label="Abrir menu"><i data-lucide="menu" class="h-5 w-5"></i></button>
         <div class="leading-tight">
           <div class="text-sm font-black tracking-tight">Guilda HUB</div>
           <div class="text-[11px] font-medium text-slate-500">Organização e controle</div>
@@ -154,7 +150,7 @@
 
           <div class="mt-6 flex flex-col gap-3 sm:flex-row sm:items-center">
             <button id="open-auth-2" type="button"
-              class="inline-flex items-center justify-center gap-2 rounded-2xl bg-emerald-600 px-5 py-3 text-sm font-extrabold text-white shadow-sm hover:bg-emerald-700 active:scale-[.98] transition">
+              class="inline-flex items-center justify-center gap-2 rounded-2xl bg-emerald-600 px-5 py-3 text-sm font-extrabold text-slate-900 shadow-sm hover:bg-emerald-700 active:scale-[.98] transition">
               <i data-lucide="sparkles" class="h-4 w-4"></i>
               Começar agora
             </button>
@@ -188,7 +184,7 @@
 
             <div class="relative">
               <div class="flex items-center gap-3">
-                <div class="h-11 w-11 rounded-2xl bg-emerald-600 text-white flex items-center justify-center shadow-sm">
+                <div class="h-11 w-11 rounded-2xl bg-emerald-600 text-slate-900 flex items-center justify-center shadow-sm">
                   <i data-lucide="shield" class="h-5 w-5"></i>
                 </div>
                 <div>
@@ -328,7 +324,7 @@
           <ol class="mt-6 space-y-3">
             <li class="reveal rounded-2xl border border-slate-200 bg-white p-4" data-reveal>
               <div class="flex items-start gap-3">
-                <div class="mt-0.5 flex h-7 w-7 items-center justify-center rounded-xl bg-emerald-600 text-xs font-black text-white">1</div>
+                <div class="mt-0.5 flex h-7 w-7 items-center justify-center rounded-xl bg-emerald-600 text-xs font-black text-slate-900">1</div>
                 <div>
                   <div class="text-sm font-black">Criar conta</div>
                   <p class="mt-1 text-sm text-slate-600">Defina o nome da guilda e inicie o painel.</p>
@@ -337,7 +333,7 @@
             </li>
             <li class="reveal rounded-2xl border border-slate-200 bg-white p-4" data-reveal>
               <div class="flex items-start gap-3">
-                <div class="mt-0.5 flex h-7 w-7 items-center justify-center rounded-xl bg-emerald-600 text-xs font-black text-white">2</div>
+                <div class="mt-0.5 flex h-7 w-7 items-center justify-center rounded-xl bg-emerald-600 text-xs font-black text-slate-900">2</div>
                 <div>
                   <div class="text-sm font-black">Configurar estrutura</div>
                   <p class="mt-1 text-sm text-slate-600">Organize membros, cargos e linhas conforme sua rotina.</p>
@@ -346,7 +342,7 @@
             </li>
             <li class="reveal rounded-2xl border border-slate-200 bg-white p-4" data-reveal>
               <div class="flex items-start gap-3">
-                <div class="mt-0.5 flex h-7 w-7 items-center justify-center rounded-xl bg-emerald-600 text-xs font-black text-white">3</div>
+                <div class="mt-0.5 flex h-7 w-7 items-center justify-center rounded-xl bg-emerald-600 text-xs font-black text-slate-900">3</div>
                 <div>
                   <div class="text-sm font-black">Operar com padrão</div>
                   <p class="mt-1 text-sm text-slate-600">Todo mundo sabe onde olhar e o que fazer.</p>
@@ -421,12 +417,7 @@
     <div class="flex h-full flex-col">
       <div class="flex items-center justify-between border-b border-slate-200 px-5 py-4">
         
-      <button id="sidebar-open" type="button"
-        class="mr-3 inline-flex h-11 w-11 items-center justify-center rounded-2xl bg-white/10 text-white ring-1 ring-white/10 transition hover:bg-white/15"
-        aria-label="Abrir menu">
-        <i data-lucide="menu" class="h-5 w-5"></i>
-      </button>
-<div class="flex items-center gap-3">
+      <div class="flex items-center gap-3">
           <div class="h-10 w-10 rounded-2xl bg-gradient-to-br from-emerald-500/20 to-green-500/10 border border-emerald-500/30 text-emerald-700 flex items-center justify-center">
             <i data-lucide="shield" class="h-5 w-5"></i>
           </div>
@@ -461,11 +452,11 @@
           </div>
 
           <button id="btn-login" type="submit"
-            class="mt-1 w-full py-3 rounded-xl bg-gradient-to-r from-emerald-600 to-green-700 text-white font-bold text-sm shadow-lg shadow-emerald-200 hover:shadow-xl hover:shadow-emerald-200 transition-all active:scale-95 flex items-center justify-center gap-2">
+            class="mt-1 w-full py-3 rounded-xl bg-gradient-to-r from-emerald-600 to-green-700 text-slate-900 font-bold text-sm shadow-lg shadow-emerald-200 hover:shadow-xl hover:shadow-emerald-200 transition-all active:scale-95 flex items-center justify-center gap-2">
             <span>Entrar</span>
           </button>
 
-          <div class="text-[10px] text-slate-400 text-center leading-tight px-2">
+          <div class="text-[10px] text-slate-500 text-center leading-tight px-2">
             Use um usuário de líder/admin (ou login de jogador).
           </div>
         </form>
@@ -502,7 +493,7 @@
           </div>
 
           <button id="btn-signup" type="submit"
-            class="w-full inline-flex items-center justify-center gap-2 rounded-xl bg-emerald-600 px-4 py-3 font-semibold text-white shadow-sm hover:bg-emerald-700 disabled:opacity-60 active:scale-[.98] transition">
+            class="w-full inline-flex items-center justify-center gap-2 rounded-xl bg-emerald-600 px-4 py-3 font-semibold text-slate-900 shadow-sm hover:bg-emerald-700 disabled:opacity-60 active:scale-[.98] transition">
             <span>Criar conta</span>
           </button>
         </form>
@@ -668,6 +659,27 @@ import { signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut } f
   if(overlay) overlay.addEventListener('click', close);
   document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') close(); });
 })();
+
+    // ===== Menu lateral (tema claro) =====
+    const sidebar = document.getElementById('sidebar');
+    const overlay = document.getElementById('sidebar-overlay');
+    function openSidebar(){
+      sidebar?.classList.remove('-translate-x-full');
+      overlay?.classList.remove('hidden');
+      document.documentElement.style.overflow = 'hidden';
+    }
+    function closeSidebar(){
+      sidebar?.classList.add('-translate-x-full');
+      overlay?.classList.add('hidden');
+      document.documentElement.style.overflow = '';
+    }
+    document.getElementById('sidebar-open')?.addEventListener('click', openSidebar);
+    document.getElementById('sidebar-close')?.addEventListener('click', closeSidebar);
+    overlay?.addEventListener('click', closeSidebar);
+
+    // ===== Entrar no topo =====
+    document.getElementById('open-auth-top')?.addEventListener('click', openAuth);
+
 </script>
 
 </body>
