--- a/suporte.html
+++ b/suporte.html
@@ -33,43 +33,43 @@
 <body class="min-h-screen bg-white text-slate-900">
 
   
-  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/50"></div>
-  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-slate-950/95 backdrop-blur border-r border-white/10 transition-transform">
-    <div class="p-4 border-b border-white/10 flex items-center justify-between">
+  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
+  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
+    <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
         <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-emerald-300"></i>
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
         </div>
         <div class="leading-tight">
-          <div class="text-white font-black">Guilda HUB</div>
-          <div class="text-xs text-slate-400">Eventos • Camps • Stats</div>
+          <div class="text-slate-900 font-black">Guilda HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
         </div>
       </div>
-      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-white/5">
-        <i data-lucide="x" class="h-5 w-5 text-slate-200"></i>
+      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-slate-100">
+        <i data-lucide="x" class="h-5 w-5 text-slate-700"></i>
       </button>
     </div>
 
     <nav class="p-3 space-y-1">
-      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="log-in" class="h-4 w-4"></i>
         <span class="font-semibold">Entrar</span>
       </a>
-      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="calendar" class="h-4 w-4"></i>
         <span class="font-semibold">Eventos e Camp</span>
       </a>
-      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="bar-chart-3" class="h-4 w-4"></i>
         <span class="font-semibold">Minhas estatísticas</span>
       </a>
-      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="help-circle" class="h-4 w-4"></i>
         <span class="font-semibold">Suporte</span>
       </a>
     </nav>
 
-    <div class="mt-auto p-4 text-xs text-slate-400 border-t border-white/10">
+    <div class="mt-auto p-4 text-xs text-slate-500 border-t border-white/10">
       <div class="leading-relaxed">Dica: você pode navegar sem login para ver eventos e consultar stats públicas.</div>
     </div>
   </aside>
@@ -77,7 +77,7 @@
 <header class="sticky top-0 z-30 bg-white/80 backdrop-blur border-b border-slate-200">
     <div class="mx-auto w-full max-w-6xl px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <button id="mobile-menu-btn" class="h-10 w-10 grid place-items-center rounded-xl bg-slate-900 text-white shadow-sm">
+        <button id="sidebar-open" class="h-10 w-10 grid place-items-center rounded-xl bg-slate-900 text-slate-900 shadow-sm">
           <i data-lucide="menu" class="h-5 w-5"></i>
         </button>
         <div class="leading-tight">
@@ -90,61 +90,49 @@
   </header>
 
 
-  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/50"></div>
-  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-slate-950/95 backdrop-blur border-r border-slate-200 transition-transform">
+  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
+  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
     <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
         <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-emerald-300"></i>
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
         </div>
         <div class="leading-tight">
-          <div class="text-white font-black">Guilda HUB</div>
-          <div class="text-xs text-slate-400">Eventos • Camps • Stats</div>
+          <div class="text-slate-900 font-black">Guilda HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
         </div>
       </div>
-      <button id="sidebar-close" class="h-9 w-9 rounded-xl hover:bg-white/10 text-slate-200 flex items-center justify-center" aria-label="Fechar menu">
+      <button id="sidebar-close" class="h-9 w-9 rounded-xl hover:bg-white/10 text-slate-700 flex items-center justify-center" aria-label="Fechar menu">
         <i data-lucide="x" class="h-5 w-5"></i>
       </button>
     </div>
     <nav class="p-4 flex flex-col gap-2">
-      <a href="/" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-200 hover:bg-white/10"><i data-lucide="log-in" class="h-4 w-4"></i><span>Entrar</span></a>
-      <a href="/eventos" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-200 hover:bg-white/10"><i data-lucide="trophy" class="h-4 w-4"></i><span>Eventos e Camp</span></a>
-      <a href="/stats" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-200 hover:bg-white/10"><i data-lucide="chart-no-axes-column" class="h-4 w-4"></i><span>Minhas estatísticas</span></a>
-      <a href="/suporte" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition bg-emerald-600 text-white"><i data-lucide="headset" class="h-4 w-4"></i><span>Suporte</span></a>
+      <a href="/" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="log-in" class="h-4 w-4"></i><span>Entrar</span></a>
+      <a href="/eventos" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="trophy" class="h-4 w-4"></i><span>Eventos e Camp</span></a>
+      <a href="/stats" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="chart-no-axes-column" class="h-4 w-4"></i><span>Minhas estatísticas</span></a>
+      <a href="/suporte" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition bg-emerald-600 text-slate-900"><i data-lucide="headset" class="h-4 w-4"></i><span>Suporte</span></a>
     </nav>
     <div class="mt-auto p-4 text-xs text-slate-500 border-t border-slate-200">
       Dica: se algo não carregar, atualize a página e tente novamente.
     </div>
   </aside>
 
-<header class="sticky top-0 z-30 border-b border-slate-200 bg-slate-950/80 backdrop-blur">
-  <div class="mx-auto w-full max-w-6xl px-4 py-4 flex items-center gap-3">
-    <button id="sidebar-open" type="button"
-      class="inline-flex h-11 w-11 items-center justify-center rounded-2xl bg-white/10 text-white ring-1 ring-white/10 transition hover:bg-white/15"
-      aria-label="Abrir menu">
-      <i data-lucide="menu" class="h-5 w-5"></i>
-    </button>
-    <div class="flex-1">
-      <div class="text-base font-black">Suporte</div>
-      <div class="text-xs text-slate-400">Guilda HUB</div>
-    </div>
-  </div>
-</header>
+
 <main class="mx-auto w-full max-w-6xl px-4 py-6">
 <section class="space-y-4">
   <article class="rounded-3xl bg-white ring-1 ring-slate-200 p-5">
     <div class="flex items-start justify-between gap-3">
       <div>
         <h2 class="text-lg font-black">Suporte</h2>
-        <p class="mt-2 text-sm text-slate-200/90">
+        <p class="mt-2 text-sm text-slate-700/90">
           Se você travou em alguma tela, não achou sua guilda, não aparece evento, ou quer sugerir melhoria,
           chama a gente. O objetivo do Guilda HUB é deixar tudo mais simples e organizado.
         </p>
-        <p class="mt-2 text-sm text-slate-200/90">
+        <p class="mt-2 text-sm text-slate-700/90">
           Para resolver rápido: manda print + o que você clicou antes do erro. Isso ajuda demais.
         </p>
       </div>
-      <i data-lucide="life-buoy" class="h-7 w-7 text-emerald-300"></i>
+      <i data-lucide="life-buoy" class="h-7 w-7 text-emerald-700"></i>
     </div>
 
     <div class="mt-5 grid grid-cols-1 gap-3 sm:grid-cols-2">
@@ -156,7 +144,7 @@
           </div>
           <div>
             <div class="text-sm font-black">Instagram</div>
-            <div class="text-xs text-slate-400">@guildahub</div>
+            <div class="text-xs text-slate-500">@guildahub</div>
           </div>
         </div>
       </a>
@@ -169,7 +157,7 @@
           </div>
           <div>
             <div class="text-sm font-black">Grupo WhatsApp</div>
-            <div class="text-xs text-slate-400">Suporte oficial</div>
+            <div class="text-xs text-slate-500">Suporte oficial</div>
           </div>
         </div>
       </a>
