--- a/stats.html
+++ b/stats.html
@@ -65,8 +65,8 @@
 
     <nav class="p-3 space-y-1">
       <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
-        <i data-lucide="log-in" class="h-4 w-4"></i>
-        <span class="font-semibold">Entrar</span>
+        <i data-lucide="home" class="h-4 w-4"></i>
+        <span class="font-semibold">Início</span>
       </a>
       <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="calendar" class="h-4 w-4"></i>
@@ -90,7 +90,7 @@
 <header class="sticky top-0 z-30 bg-white/80 backdrop-blur border-b border-slate-200">
     <div class="mx-auto w-full max-w-6xl px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <button id="sidebar-open" class="h-10 w-10 grid place-items-center rounded-xl bg-slate-900 text-slate-900 shadow-sm">
+        <button id="sidebar-open" class="h-10 w-10 grid place-items-center rounded-xl bg-white ring-1 ring-slate-200 text-slate-900 shadow-sm hover:bg-slate-50">
           <i data-lucide="menu" class="h-5 w-5"></i>
         </button>
         <div class="leading-tight">
@@ -100,38 +100,7 @@
       </div>
       <a href="index.html" class="text-sm font-semibold text-emerald-700 hover:text-emerald-800">Voltar</a>
     </div>
-  </header>
-
-
-  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
-  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
-    <div class="p-4 border-b border-slate-200 flex items-center justify-between">
-      <div class="flex items-center gap-2">
-        <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
-        </div>
-        <div class="leading-tight">
-          <div class="text-slate-900 font-black">Guilda HUB</div>
-          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
-        </div>
-      </div>
-      <button id="sidebar-close" class="h-9 w-9 rounded-xl hover:bg-white/10 text-slate-700 flex items-center justify-center" aria-label="Fechar menu">
-        <i data-lucide="x" class="h-5 w-5"></i>
-      </button>
-    </div>
-    <nav class="p-4 flex flex-col gap-2">
-      <a href="/" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="log-in" class="h-4 w-4"></i><span>Entrar</span></a>
-      <a href="/eventos" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="trophy" class="h-4 w-4"></i><span>Eventos e Camp</span></a>
-      <a href="/stats" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition bg-emerald-600 text-slate-900"><i data-lucide="chart-no-axes-column" class="h-4 w-4"></i><span>Minhas estatísticas</span></a>
-      <a href="/suporte" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-700 hover:bg-white/10"><i data-lucide="headset" class="h-4 w-4"></i><span>Suporte</span></a>
-    </nav>
-    <div class="mt-auto p-4 text-xs text-slate-500 border-t border-slate-200">
-      Dica: se algo não carregar, atualize a página e tente novamente.
-    </div>
-  </aside>
-
-
-<main class="mx-auto w-full max-w-6xl px-4 py-6">
+  </header><main class="mx-auto w-full max-w-6xl px-4 py-6">
 <section class="space-y-4">
   <div class="rounded-3xl bg-white ring-1 ring-slate-200 p-4">
     <div class="text-sm font-bold">Buscar meu perfil</div>
@@ -139,7 +108,7 @@
     <div class="mt-4 flex flex-col gap-3 sm:flex-row">
       <input id="query" type="text" placeholder="Seu nick ou ID"
         class="flex-1 rounded-2xl bg-white ring-1 ring-slate-200 px-4 py-3 text-sm outline-none focus:ring-emerald-400/40" />
-      <button id="btn" class="rounded-2xl bg-emerald-600 px-5 py-3 text-sm font-black hover:bg-emerald-700 transition">Buscar</button>
+      <button id="btn" class="rounded-2xl bg-emerald-600 px-5 py-3 text-sm font-black hover:bg-emerald-700 transition text-white">Buscar</button>
     </div>
     <div id="hint" class="mt-3 text-xs text-slate-500"></div>
   </div>
@@ -185,9 +154,9 @@ __sbClose?.addEventListener('click', () => {
 });
 
 
-const elInput = document.getElementById('q');
+const elInput = document.getElementById('query');
 const elBtn = document.getElementById('btn');
-const elOut = document.getElementById('out');
+const elOut = document.getElementById('result');
 const elHint = document.getElementById('hint');
 
 const norm = (v) => (v == null ? '' : String(v)).toLowerCase().trim();
