--- a/eventos.html
+++ b/eventos.html
@@ -279,72 +279,72 @@ function tag(text, cls = "bg-slate-100 text-slate-700 ring-1 ring-slate-200") {
 }
 
 function render(items) {
-  if (!elGrid) return;
-
-  if (!items.length) {
-    elGrid.innerHTML = `<div class="col-span-full rounded-3xl border border-slate-200 bg-white p-5 text-slate-600">
-      Nenhum evento encontrado com esse filtro/pesquisa.
+  if (!items || !items.length) {
+    elGrid.innerHTML = `<div class="col-span-full rounded-2xl border border-slate-200 bg-white p-5 text-slate-600">
+      Nenhum evento encontrado.
     </div>`;
     return;
   }
 
+  const esc = escapeHtml;
+  const asText = (v) => (v == null ? "" : String(v));
+  const trim = (v) => asText(v).trim();
+
   const iconLine = (icon, text) => {
-    if (!text) return "";
+    const s = trim(text);
+    if (!s) return "";
     return `<div class="flex items-center gap-3 text-slate-700">
       <i data-lucide="${icon}" class="h-5 w-5 text-emerald-600"></i>
-      <div class="text-[15px] font-semibold">${escapeHtml(String(text))}</div>
+      <div class="text-[15px] font-semibold">${esc(s)}</div>
     </div>`;
   };
 
   elGrid.innerHTML = items.map((it) => {
     const d = it.raw || {};
-    const t = getTypeFlags(d);
+    const title = trim(it.title || d.title || d.titulo || d.name || d.nome || "Evento");
+    const guildName = trim(it.guildName || d.guildName || d.guild || "Guilda");
+    const desc = trim(it.description || d.description || d.descricao || "");
+    const desc75 = desc.length > 75 ? (desc.slice(0, 75) + "…") : desc;
 
-    const title = safeStr(it.title || d.title || d.nome || "Evento");
-    const guildName = safeStr(it.guildName || d.guildName || "Guilda");
+    // imagem
+    let imgSrc = trim(d.imageBase64 || d.photoBase64 || d.bannerBase64 || d.image || "");
+    if (imgSrc && !imgSrc.startsWith("data:image/")) {
+      imgSrc = "data:image/png;base64," + imgSrc;
+    }
 
-    const desc = safeStr(it.description || d.description || d.desc || d.descricao || "").trim();
-    const desc75 = desc ? escapeHtml(desc).slice(0, 75) + (desc.length > 75 ? "…" : "") : "";
+    const tFlags = getTypeFlags(d);
 
-    const link = (d.link || d.destino || d.url || "").toString().trim();
+    const modeLabel = (tFlags.isXVX ? (trim(d.matchup || d.xvx || d.partida || d.duelo) || "")
+                    : (trim(d.mode || d.modo || d.brMode) || "")).toUpperCase();
 
-    const b64 = (d.photoBase64 || d.fotoBase64 || d.imageBase64 || d.bannerBase64 || d.foto || d.imagem || "").toString().trim();
-    const imgSrc = b64 ? (b64.startsWith('data:') ? b64 : `data:image/jpeg;base64,${b64}`) : "";
+    const quedas = trim(d.quedas || d.drops || "");
+    const local = trim(d.local || d.lugar || d.mapa || "");
+    const maxP = trim(d.maxPlayers ?? d.max ?? d.limite ?? d.participantes ?? d.maxParticipants ?? "");
 
-    const modeLabel = t.isXVX
-      ? (t.matchup || "XvX").toUpperCase()
-      : (t.mode || d.mode || d.modo || "").toString().toUpperCase();
-
-    const quedas = safeStr(d.quedas || d.drops || "");
-    const local = safeStr(d.local || d.lugar || d.mapa || "");
-
-    const fee = moneyBRL(d.fee ?? d.taxa ?? d.inscricaoValor ?? d.valorInscricao);
+    const fee = moneyBRL(d.feeValue ?? d.fee ?? d.taxa ?? d.inscricaoValor ?? d.valorInscricao);
     const prize = moneyBRL(d.prizeTotal ?? d.premiacao ?? d.premio);
 
-    const dateText = it.dateText ? safeStr(it.dateText) : (safeStr(d.dateText || d.data || ""));
-    const timeText = safeStr(d.timeText || d.hora || d.horario || "");
-
-    const maxP = (d.maxPlayers ?? d.max ?? d.limite ?? d.participantes ?? d.maxParticipants ?? "").toString().trim();
+    const dateText = trim(d.dateText || d.data || it.dateText || "");
+    const timeText = trim(d.timeText || d.hora || d.horario || "");
 
     const modeRow = (() => {
-      if (t.isXVX && modeLabel) return iconLine("swords", modeLabel);
-      if (t.isBR && modeLabel && quedas) return iconLine("swords", `${modeLabel} • ${quedas} quedas`);
+      if (tFlags.isXVX && modeLabel) return iconLine("swords", modeLabel);
+      if (tFlags.isBR && modeLabel && quedas) return iconLine("swords", `${modeLabel} • ${quedas} quedas`);
       if (modeLabel) return iconLine("swords", modeLabel);
       return "";
     })();
 
-    const feeRow = (t.isPaid || (fee && fee !== "R$ 0,00")) ? iconLine("wallet", fee ? fee : "Pago") : iconLine("wallet", "Gratuito");
+    const feeRow = (tFlags.isPaid || fee) ? iconLine("wallet", fee ? fee : "Pago") : iconLine("wallet", "Gratuito");
     const prizeRow = (prize && prize !== "R$ 0,00") ? iconLine("gift", prize) : "";
     const dateRow = dateText ? iconLine("calendar", dateText) : iconLine("calendar", "Sem data");
     const timeRow = timeText ? iconLine("clock", timeText) : iconLine("clock", "Sem horário");
     const localRow = local ? iconLine("map-pin", local) : "";
     const maxRow = maxP ? iconLine("users", `${maxP} participantes`) : "";
 
-    const pill = it.expText
-      ? `<span class="rounded-full bg-slate-900 px-3 py-1.5 text-xs font-black text-white">${escapeHtml(it.expText)}</span>`
-      : `<span class="rounded-full bg-emerald-50 px-3 py-1.5 text-xs font-black text-emerald-800 ring-1 ring-emerald-100">Próximo</span>`;
+    const link = trim(d.link || d.destino || d.url || d.contatoLink || d.whats || "");
 
-    // Layout inspirado no card do camp.html (foto pequena + infos em lista + ações embaixo)
+    const pill = `<span class="rounded-full bg-emerald-50 px-3 py-1.5 text-xs font-black text-emerald-800 ring-1 ring-emerald-100">Próximo</span>`;
+
     return `<article class="rounded-[28px] border border-slate-200 bg-white shadow-sm overflow-hidden">
       <div class="p-6">
         <div class="flex items-start justify-between gap-4">
@@ -356,9 +356,9 @@ function render(items) {
               }
             </div>
             <div class="min-w-0">
-              <div class="text-2xl font-black tracking-tight text-slate-900 truncate">${escapeHtml(title)}</div>
-              <div class="text-slate-500 font-medium">Por ${escapeHtml(guildName)}</div>
-              ${desc75 ? `<div class="mt-2 text-xl font-medium text-slate-800">${desc75}</div>` : ``}
+              <div class="text-2xl font-black tracking-tight text-slate-900 truncate">${esc(title)}</div>
+              <div class="mt-1 text-sm text-slate-500 truncate">Por <span class="font-semibold text-slate-700">${esc(guildName)}</span></div>
+              ${desc75 ? `<div class="mt-2 text-xl font-medium text-slate-800">${esc(desc75)}</div>` : ``}
             </div>
           </div>
           <div class="shrink-0">${pill}</div>
@@ -374,13 +374,11 @@ function render(items) {
           ${maxRow}
         </div>
 
-        <div class="mt-6 border-t border-slate-200 pt-5 flex items-center justify-center gap-10 text-sm font-bold">
+        <div class="mt-6 border-t border-slate-200 pt-5 flex items-center justify-center text-sm font-bold">
           ${link
-            ? `<a href="${escapeHtml(link)}" target="_blank" rel="noopener noreferrer" class="text-emerald-700 hover:text-emerald-800">Ver infos</a>`
+            ? `<a href="${link}" target="_blank" rel="noopener noreferrer" class="text-emerald-700 hover:text-emerald-800">Ver infos</a>`
             : `<span class="text-slate-400">Sem link</span>`
           }
-          <span class="text-slate-300 select-none">Editar</span>
-          <span class="text-red-300 select-none">Excluir</span>
         </div>
       </div>
     </article>`;
